DCTechnologySolutions/Content/Site.css
/*
    <link href="https://fonts.googleapis.com/css?family=Baloo|Courgette|Montserrat:700|Pattaya|Paytone+One|Poppins:700|Russo+One" rel="stylesheet"> 
    font-family: 'Baloo', cursive;
    font-family: 'Courgette', cursive;
    font-family: 'Montserrat', sans-serif;
    font-family: 'Pattaya', sans-serif;
    font-family: 'Paytone One', sans-serif;
    font-family: 'Poppins', sans-serif;
    font-family: 'Russo One', sans-serif;
*/

.Courgette {
    font-family: 'Courgette', cursive;
}
.Montserrat {
    font-family: 'Montserrat', sans-serif;
}

.boxed {
    border-style:solid;
    border-color:blue;
    border-width:2px;
}

@font-face {
	font-family: 'Sans-Copperplate Gothic';
	src: url('../fonts/sans-copperplategothic.ttf') format('truetype'),
     url('../fonts/Sans-Copperplate-Gothic.eot'),
     url('../fonts/Sans-Copperplate-Gothic.eot?#iefix') format('embedded-opentype'); /*IE8 and lower */
	font-weight: normal;
	font-style: normal;
}

body, h1, h2, h3, h4, h5, h6, p, .h1, .h2, .h3, .h4, .h5, .h6 {
    	font-family: 'Sans-Copperplate Gothic', sans-serif;
        color:darkblue;
}

body {
    padding-top: 1px;
    padding-bottom: 20px;
    background-color:floralwhite;
}
a:hover, a:focus {
}
h2 {
    color:darkblue;

}
/* Set padding to keep content from hitting the edges */
.body-content {
    padding-left: 15px;
    padding-right: 15px;
    margin-top:78px;
}

/* Override the default bootstrap behavior where horizontal description lists 
   will truncate terms that are too long to fit in the left column 
*/
.dl-horizontal dt {
    white-space: normal;
}

/* Set width on the form input elements since they're 100% wide by default */
input,
select,
textarea {
    max-width: 280px;
}

.valign {
    text-align:center;
    width:100%;
    margin:auto;
}

.DCTechBrandBk {
    background: linear-gradient(lightblue, floralwhite);
    height: 300px;
    width: 100%;
    opacity:1;
    position:absolute;
    z-index:-10;
}

.DCTechBrand {

    background-size: 100%;
    background-repeat: no-repeat;
    background-image:url('../Images/DC LOGO B&W2ALightBlue.png');
    height:227px;    
    width:299px;
    margin: 50px auto;
    background-clip:border-box;
    float:none;
    text-align:center;
    display:block;
}

.inherhitWidth {
    width:inherit;
}
.DCTechBrand:hover, .DCTechBrand:focus {
    opacity:.41;
}

.noOutline {
    outline:none;
}

/* min width of 570, title gets normal (small below) */
.titleContainer {
    width:65%;
    min-width:240px;
    margin:auto;
}

.mainTitleTop {
    width:100%;
    margin:auto;
}
.mainTitleBot,
.appTitle {
    margin:auto;
    font-variant:small-caps;
    color:darkblue;
    text-align:center;
}

.titlebr { /* Not used */
    border-style:solid;
    border-color:black;
    margin-top:0;
    margin-bottom:0;

}

/*
@media only screen and (min-width:320px) {
    .mainTitleBot,
    .appTitle {
    }
}

@media only screen and (min-width:570px) {
    .mainTitleBot,
    .appTitle {
    }
}
*/

@media only screen and (min-width:768px) {
     .mainTitleBot,
    .appTitle {
         width:100%;
    }
}

.subTitle {
    padding-bottom:3em;   
    font-variant:small-caps;
    font-size:large;
}
.Services h2, .Gallery h2, .ContactDCTech h2 {
    text-align:center;
}

.Services li, .project p {
    font-family: 'Montserrat', sans-serif;
    font-size:20px;
}

.Services li {
    padding-bottom:1em;
}

.ServiceDesc {
    font-size:smaller;
}
.usefulResourcesText {
    font-size:20px;
}
.Services ul {
    list-style-type: circle;
}
@media only screen and (min-width:768px) {
    .subTitle {
        padding-bottom:3em;   
        font-variant:small-caps;
        font-size:medium;
    }

    .Services h2, .Gallery h2, .ContactDCTech h2, .project h2 {
        text-align:left;
        font-size:36px;
        padding-top:1em;
    }
    .project h3 {
        font-size:30px;
    }
    .Services li {
        font-size: 20px;
        font-weight:400;
        letter-spacing:1px;
        line-height:150%;
    }

    .Services li, .project p {
        font-family: 'Montserrat', sans-serif;
    }
    .Gallery {
        padding-bottom:3em;
    }
    .project a {
        font-size:24px;
    }
    .resources p {
        font-size:20px;
    }
    .ContactDCTech p {
        font-size:24px;
    }
}
@media only screen and (min-width:992px) {
    .Services ul {
        padding-left: 4em;
        padding-right: 18em;
    }
}

/* Below min witdh of 768, Gallery boxes should be stacked. Above, they should be columns*/
.GalleryBox {
    max-width:75%;
    margin:auto;
    padding-top:.5em;
    padding-bottom:.5em;
}

.GalleryBox:hover {
    opacity:.4;
}

.GalleryImage {
    width:100%;
    vertical-align:middle;
    border-style:solid;
    border-color:darkblue;
    border-width:2px;
}

.GalleryImage:hover {
    background-color:linen;
}

@media only screen and (min-width:768px) {

    .GalleryBox {
        height:320px;
        white-space:nowrap;
        padding-top:initial;
    }
    .GalleryHeightBox {
        height: 100%;
        display: inline-block;
        vertical-align: middle;
    }

    .GalleryImage {
        width: 95%;
    }
}

.container .body-content> .ContactDCTech {
    margin-left:0;
    margin-right:0;
    padding-left:0;
    padding-right:0;
    max-width:100%;
}
.ContactDCTech {
    padding:1em 4em 4em;
    border-color:darkblue;
    border-width:6px;
    border-style:double;
/    background-color:darkblue;
    color:darkblue;
}
.ContactDCTech h2 {
/    color:linen;
}
.ContactDCTech p {
    font-family: 'Courgette', cursive;
    font-size:24px;
    padding:20px 20px, 30px 20px;
}

.ContactBtn {
    border-style:solid;
    border-color:darkblue;
    color:darkblue;
    background-color:lightblue;
    padding: 0.2em 1em;
    font-size:2em;
    border-radius:1em;
    margin-top:1.5em;
    margin-left:auto;
    margin-right:auto;
    width:250px;
    display:block;
}

.ContactBtn:hover, .ContactBtn:focus{
    text-decoration:none;
    color:darkblue;
    background-color:floralwhite;
}

h4 {
    line-height:110%;
    letter-spacing:1.3px;
}

.projectlink {
    font-family: 'Sans-Copperplate Gothic', sans-serif;
}

@media only screen  and (min-width:768px) {
    .projectlink {
        font-size: 18px;
    }
    .projectlink a {
        font-size: 24px;
    }
}

.leftArrow {
    float:left;
}

.rightArrow {
    float:right;
}
.copy { /* Copyright in footer */
    font-family:sans-serif;
}

/* min width of x, footer should be one line. Below, two lines and both left justified */
.rightFoot {
    float:left;
}
.leftFoot {
    float:left;
}

.leftFoot, .rightFoot {
    color:darkblue;
}
@media only screen and (min-width:768px) {
    .rightFoot {
        float: right;
    }
    .leftFoot, .rightFoot {
        font-size:14px;

    }
    
}

@media only screen and (min-width:992px) {
    .leftFoot {
    }
}

/* CAB Page*/
.CABBox {
    height:320px;
    white-space:nowrap;
    padding-top:initial;
}

.CABImage {
    height:90%;
}

.CABLogoContainer {
    width:100%;
    margin:auto;
}
.CABLogo {
    display:block;
    width:50px;
    margin:auto;

}

@media only screen and (min-width:768px) {

    .CABHeightBox {
        height: 100%;
        display: inline-block;
        vertical-align: middle;
    }

    .CABAlign {
        vertical-align: middle;
    }
    .CABImage {
    float:left;
}

}

img.EquityQFB  {
    width:180px;
}
img.EquityFBFB {
    width:60px;
}

